# sistemas_operacionais

./: 404.html  README.md  TomatoesDTO.py  index.html  lista_filmes.csv  lista_filmes_rottenTomatoes.csv  main.py  mkdocs.yml  pyproject.toml  search.html
docs/: entrega01.md  entrega02.md  entrega03.md  entrega04.md  entrega05.md  index.md  requirements.txt
documentacao/docs/: index.md
documentacao/site/: 404.html  index.html  search.html
documentacao/site/search/: search_index.json
entrega01/: index.html
entrega02/: index.html
entrega03/: index.html
entrega04/: index.html
entrega05/: index.html
site/: requirements.txt
site/entrega04/: index.html
site/search/: search_index.json
