[tool.poetry]
name = "sistemas_operacionais"
version = "1.0.1"
description = "Sistema de seleção de filmes com maiores notas de audiência do site RottenTomatoes"
authors = ["eversonott <everson.ott@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.19.0"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
